IntegrationHub/force-app/main/default/objects/Integration_Order__c/Integration_Order__c.object-meta.xml
<CustomObject>
    <label>Integration Order</label>
    <pluralLabel>Integration Orders</pluralLabel>
    <nameField>
        <label>Order Number</label>
        <type>AutoNumber</type>
        <displayFormat>ORD-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>