IntegrationHub/force-app/main/default/objects/Integration_Order__c/fields/External_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Id__c</fullName>
    <label>External Order Id</label>
    <type>Text</type>
    <length>60</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Idempotency key supplied by the calling system — used to detect and safely ignore duplicate deliveries.</description>
</CustomField>