IntegrationHub/force-app/main/default/objects/Integration_Order__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <label>Raw Payload</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>The exact JSON body received from the calling system — kept for audit and debugging.</description>
</CustomField>