IntegrationHub/force-app/main/default/objects/Integration_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Received</fullName><default>true</default><label>Received</label></value>
            <value><fullName>Processed</fullName><default>false</default><label>Processed</label></value>
            <value><fullName>Duplicate</fullName><default>false</default><label>Duplicate</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>